--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-app
+  name: spring-petclinic
   labels:
-    app: spring-boot-app
+    app: spring-petclinic
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: spring-boot-app
+      app: spring-petclinic
   template:
     metadata:
       labels:
-        app: spring-boot-app
+        app: spring-petclinic
     spec:
       containers:
-      - name: spring-boot-app
-        image: abhishekf5/ultimate-cicd:replaceImageTag
+      - name: spring-petclinic
+        image: knaishadam/demo-cicd:replaceImageTag
         ports:
         - containerPort: 8080
