--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,7 +16,7 @@ pipeline {
       steps {
         // sh 'ls -ltr'
         // build the project and create a JAR file
-        sh 'cd spring-petclinic && mvnw package'
+        sh 'mvnw package'
       }
     }
     stage('Static Code Analysis') {
@@ -25,7 +25,7 @@ pipeline {
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd spring-petclinic && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh 'mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
     }
