--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,7 +16,7 @@ pipeline {
       steps {
         // sh 'ls -ltr'
         // build the project and create a JAR file
-        sh 'mvnw package'
+        sh './mvnw package'
       }
     }
     stage('Static Code Analysis') {
